refactor code format in functional style